Fixed core not stretching

--- a/styles/_core.scss
+++ b/styles/_core.scss
@@ -22,6 +22,7 @@
 
     > .wrapper {
         display: flex;
+        flex-grow: 1;
 
         @media #{$media-medium} {
             margin-top: 59px;
